--- a/package.json
+++ b/package.json
@@ -1,20 +1,25 @@
 {
-  "name": "build_a_bingo_personal",
+  "name": "build-a-bingo",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server/server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "cd client && npm run build",
+    "install": "cd server && npm i && cd ../client && npm i",
+    "start": "node server/server.js",
+    "develop": "concurrently \"cd server && npm run watch\" \"cd client && npm start\"",
+    "seed": "cd server && npm run seed"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/sppencerr/build_a_bingo_personal.git"
+  "devDependencies": {
+    "autoprefixer": "^10.4.13",
+    "concurrently": "^5.3.0",
+    "postcss": "^8.4.20",
+    "tailwindcss": "^3.2.4"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/sppencerr/build_a_bingo_personal/issues"
-  },
-  "homepage": "https://github.com/sppencerr/build_a_bingo_personal#readme"
+  "dependencies": {
+    "flowbite": "^1.5.5",
+    "flowbite-react": "^0.3.7",
+    "passport": "^0.6.0"
+  }
 }
